# RK3588_yolov8detect_cpp

./: README.md
cpp/: CMakeLists.txt  main.cc  main_img.cc  mainwww.cc  postprocess.cc  postprocess.h  yolov8.cc  yolov8.h
cpp/install/: rknn_yolov8_demo
cpp/rknpu2/: yolov8.cc
cpp/utils/: CMakeLists.txt  image_drawing.c
